<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:layout_centerVertical="true"
        android:padding="@dimen/padding_medium"
        android:text="@string/hello_world"
        tools:context=".MainActivity" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:gravity="center|top"
        android:orientation="vertical" >

        <Button
            android:id="@+id/HomeReminderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reminder" />

        <Button
            android:id="@+id/HomeCalculatorButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculator" />

        <Button
            android:id="@+id/HomeBudgetPadButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:width="150dp"
            android:text="@string/budgetpad" />

        <Button
            android:id="@+id/HomeAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account" />

    </LinearLayout>

</RelativeLayout>
