<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res/com.jeannius.tallycap">

    <com.jeannius.tallycap.util.MySeekBarWidget
        android:id="@+id/k401kCalculatorAnnualSalaryMySeekBarWidget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left_margin_standard"
        android:layout_marginTop="@dimen/top_spacing_super"
        android:tag="@string/annual_salary"
        app:max="@integer/a_billion"
        app:type="money" >

    </com.jeannius.tallycap.util.MySeekBarWidget>

    <com.jeannius.tallycap.util.MySeekBarWidget
        android:id="@+id/k401kCalculatorContributionMySeekBarWidget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/k401kCalculatorAnnualSalaryMySeekBarWidget"
        android:layout_marginLeft="@dimen/left_margin_standard"
        android:layout_marginTop="@dimen/top_spacing"
        android:tag="@string/contribution"
        app:max="@integer/fifty"
        app:type="money_percent_or_fixed" >

    </com.jeannius.tallycap.util.MySeekBarWidget>

    <com.jeannius.tallycap.util.MySeekBarWidget
        android:id="@+id/k401kCalculatorYearsToRetirementMySeekBarWidget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/k401kCalculatorContributionMySeekBarWidget"
        android:layout_marginLeft="@dimen/left_margin_standard"
        android:layout_marginTop="@dimen/top_spacing"
        android:tag="@string/years_to_retirement"
        app:max="@integer/one_hundred"
        app:type="time_year_only" >

    </com.jeannius.tallycap.util.MySeekBarWidget>

    <com.jeannius.tallycap.util.MySeekBarWidget
        android:id="@+id/k401kCalculatorRateOfReturnMySeekBarWidget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/k401kCalculatorYearsToRetirementMySeekBarWidget"
        android:layout_marginLeft="@dimen/left_margin_standard"
        android:layout_marginTop="@dimen/top_spacing"
        android:tag="@string/rate_of_return"
        app:max="@integer/fifty"
        app:type="percent" >

    </com.jeannius.tallycap.util.MySeekBarWidget>

    <com.jeannius.tallycap.util.MySeekBarWidget
        android:id="@+id/k401kCalculatorAnnualIncreaseMySeekBarWidget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/k401kCalculatorRateOfReturnMySeekBarWidget"
        android:layout_marginLeft="@dimen/left_margin_standard"
        android:layout_marginTop="@dimen/top_spacing"
        android:tag="@string/annual_increase"
        app:max="@integer/fifty"
        app:type="percent" >

    </com.jeannius.tallycap.util.MySeekBarWidget>

    <com.jeannius.tallycap.util.MySeekBarWidget
        android:id="@+id/k401kCalculatorCurrentSavingsMySeekBarWidget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/k401kCalculatorAnnualIncreaseMySeekBarWidget"
        android:layout_marginLeft="@dimen/left_margin_standard"
        android:layout_marginTop="@dimen/top_spacing"
        android:tag="@string/current_savings"
        app:max="@integer/a_billion"
        app:type="money" >

    </com.jeannius.tallycap.util.MySeekBarWidget>

    <com.jeannius.tallycap.util.MySeekBarWidget
        android:id="@+id/k401kCalculatorEmployersMatchMySeekBarWidget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/k401kCalculatorCurrentSavingsMySeekBarWidget"
        android:layout_marginLeft="@dimen/left_margin_standard"
        android:layout_marginTop="@dimen/top_spacing"
        android:tag="@string/employer_match"
        app:max="@integer/fifty"
        app:type="percent" >

    </com.jeannius.tallycap.util.MySeekBarWidget>

    <com.jeannius.tallycap.util.MySeekBarWidget
        android:id="@+id/k401kCalculatorEmployersLimitMySeekBarWidget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/k401kCalculatorEmployersMatchMySeekBarWidget"
        android:layout_marginLeft="@dimen/left_margin_standard"
        android:layout_marginTop="@dimen/top_spacing"
        android:tag="@string/employer_limit"
        app:max="@integer/fifty"
        app:type="percent" >

    </com.jeannius.tallycap.util.MySeekBarWidget>

    <TextView
        android:id="@+id/k401KCalculatorResultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/k401kCalculatorEmployersLimitMySeekBarWidget"
        android:alpha="0"
        android:gravity="center"
        android:textColor="@color/text_regular_color" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/k401KCalculatorResultTextView"
        android:gravity="center"
        android:paddingBottom="15dp" >

        <Button
            android:id="@+id/K401kCalculatorCalculateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:minWidth="120dip"
            android:text="@string/calculate" />

        <Button
            android:id="@+id/K401kCalculatorWhatIfButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:minWidth="120dip"
            android:text="@string/what_if" />
    </LinearLayout>

</RelativeLayout>
