<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:scrollbarFadeDuration="250" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/start_date" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="30dp"
            android:text="@string/amount" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="30dp"
            android:text="@string/interest_rate" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/textView3"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="30dp"
            android:text="@string/length" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/textView4"
            android:layout_below="@id/textView4"
            android:layout_marginTop="30dp"
            android:text="@string/trade_in_value" /><TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/textView5"
            android:layout_below="@id/textView5"
            android:layout_marginTop="30dp"
            android:text="@string/down_payment" />

        <com.jeannius.tallycap.util.MyUneditableDateEditText
            android:id="@+id/AutoDateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView1"
            android:layout_alignBottom="@+id/textView1"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/textView1"
            android:ems="10"
            android:hint="@string/enter_date" >

            <requestFocus />
        </com.jeannius.tallycap.util.MyUneditableDateEditText>

        <com.jeannius.tallycap.util.MyEditText
            android:id="@+id/AutoAmountEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignBottom="@+id/textView2"
            android:layout_alignLeft="@+id/AutoDateEditText"
            android:ems="10"
            android:hint="@string/enter_amount"
            android:inputType="numberDecimal"
            android:maxLength="12" />

        <com.jeannius.tallycap.util.MyEditText
            android:id="@+id/AutoInterestEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView3"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignLeft="@+id/AutoAmountEditText"
            android:ems="10"
            android:hint="@string/enter_interest"
            android:inputType="numberDecimal"
            android:maxLength="5" />

        <Spinner
            android:id="@+id/AutoLengthSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView4"
            android:layout_alignLeft="@+id/AutoInterestEditText"
            android:entries="@array/auto_loan_length" />

        <TextView
            android:id="@+id/AutoResultTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView6"
            android:layout_centerVertical="false"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/AutoResultTextView"
            android:layout_marginTop="30dp"
            android:gravity="center" >

            <Button
                android:id="@+id/AutoCalculateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:minWidth="120dip"
                android:text="@string/calculate" /><Button
                android:id="@+id/AutoWhatIfButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:minWidth="120dip"
                android:text="@string/what_if"
                tools:ignore="Deprecated" />

        </LinearLayout>

        <com.jeannius.tallycap.util.MyEditText
            android:id="@+id/AutoTradeInValueMyEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView5"
            android:layout_alignBottom="@+id/textView5"
            android:layout_alignLeft="@+id/AutoLengthSpinner"
            android:ems="10" />

        <com.jeannius.tallycap.util.MyEditText
            android:id="@+id/AutoDownPaymentMyEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView6"
            android:layout_alignBottom="@+id/textView6"
            android:layout_alignLeft="@+id/AutoTradeInValueMyEditText"
            android:ems="10"
            android:width="100dp" />

        <Spinner
            android:id="@+id/AutoDownPaymentSelectionSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/textView6"
            android:layout_alignTop="@id/textView6"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/AutoDownPaymentMyEditText"
            android:entries="@array/fixed_vs_percent" />

    </RelativeLayout>

</ScrollView>